--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html >
 <head>
   <meta charset="UTF-8">
-  <title>Aquarium Love. Variable based CSS Aquarium.</title>
+  <title>AquariOS - Opere seu aquário de maneira remota</title>
 
 
 
