--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>AquariOS - Opere seu aquário de maneira remota</title>
 
-
+<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,700" rel="stylesheet">
 
       <link rel="stylesheet" href="css/style.css">
 
@@ -13,6 +13,7 @@
 
 <body>
   <div class="room">
+    <h1 class="titulo">AquariOS</h1>
     <div class="aquarium">
       <div class="lights">
         <div class="light kessil150"></div>
