mudança drastica de design
font do HTML

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 
 <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,700" rel="stylesheet">
 
-      <link rel="stylesheet" href="css/style.css">
+
+      <link rel="stylesheet" href="css/style.css"><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
 </head>
@@ -33,13 +34,13 @@
       </div>
       <div class="stand">
         <div class="bt_">
-          <button type="button" id="bt1">ALIMENTAR OS PEIXES</button>
+          <button type="button" id="bt1"><i class="fa fa-apple" aria-hidden="true"></i>   ALIMENTAR OS PEIXES</button>
         </div>
         <div class="bt_">
-          <button type="button" id="bt1">LIGAR A LUZ</button>
+          <button type="button" id="bt1"><i class="fa fa-lightbulb-o" aria-hidden="true"></i> LIGAR A LUZ</button>
         </div>
         <div class="bt_">
-          <button type="button" id="bt1">CONFIGURAÇÕES</button>
+          <button type="button" id="bt1"><i class="fa fa-cog" aria-hidden="true"></i> CONFIGURAÇÕES</button>
         </div>
       </div>
     </div>
