--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <button type="button" id="bt1"><i class="fa fa-lightbulb-o" aria-hidden="true"></i> LIGAR A LUZ</button>
         </div>
         <div class="bt_">
-          <button type="button" id="bt1"><i class="fa fa-cog" aria-hidden="true"></i> CONFIGURAÇÕES</button>
+          <a href="dashboard.html"><button type="button" id="bt1"><i class="fa fa-cog" aria-hidden="true"></i> PAINEL DE CONTROLE</button></a>
         </div>
       </div>
     </div>
