--- a/dashboard.html
+++ b/dashboard.html
@@ -15,14 +15,17 @@
       .content {
         margin-top: 30px;
       }
+      .card-content {
+        margin-top: 40px;
+      }
 
       nav {
         background-color: #F9A825;
       }
 
       .statistic {
-        font-size: 8em;
-        margin-top: 15px !important;
+        font-size: 10em;
+        margin-top: 50px !important;
       }
 
       .card {
