--- a/dashboard.html
+++ b/dashboard.html
@@ -128,5 +128,5 @@
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
   <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
-  <script src="JS/app.js"></script>
+  <script src="js/app.js"></script>
 </html>
